--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
     <artifactId>jacoco-maven-plugin</artifactId>
     <version>0.8.12</version>
     </dependency>
+  <dependency>
+  <groupId>io.vertx</groupId>
+  <artifactId>vertx-pg-client</artifactId>
+  <version>4.5.11</version>
+  </dependency>
   </dependencies>
 
   <build>
