--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
     <artifactId>jacoco-maven-plugin</artifactId>
     <version>0.8.12</version>
     </dependency>
+    <dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.8.9</version>
+</dependency>
   <dependency>
   <groupId>io.vertx</groupId>
   <artifactId>vertx-pg-client</artifactId>
